Fixed background image works on mobile

--- a/styles/main.css
+++ b/styles/main.css
@@ -62,6 +62,23 @@ body {
     margin: 0;
 }
 
+.fixed-background {
+    position: fixed;
+    right: 0;
+    bottom: 0;
+    min-width: 100%;
+    min-height: 100%;
+    width: auto;
+    height: auto;
+    z-index: -100;
+    margin: 0;
+    background: url("../images/stars.jpg") center center no-repeat;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    }
+
 #hero-title {
     font-family: 'Kaushan Script', cursive;
     fill: white;
@@ -83,12 +100,7 @@ svg {
 }
 
 html {
-    background: rgb(30, 20, 50) url("../images/stars.jpg") no-repeat center center;
-    background-attachment: fixed;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
+    background-color: rgb(30, 20, 50);
     font-family: 'Open Sans', sans-serif;
 }
 
@@ -381,13 +393,6 @@ span.purple-text-example-2 {
 
 /* MOBILE DEVICES (less than 480px) */
 @media screen and (max-width: 480px) {
-    html {
-        background-attachment: scroll;
-    }
-    .about-me-wrapper {
-        backdrop-filter: blur(6px);
-        -webkit-backdrop-filter: blur(6px);
-    }
     .about-me-grid {
         grid-template-columns: 100%;
     }
@@ -404,4 +409,5 @@ span.purple-text-example-2 {
     #blog-number-fixer {
         padding-left: 20px;
     }
+
 }
